SDIT-1294 Correct create_user_id nomis db field for add-appointments